<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".MainActivity"
    tools:deviceIds="wear">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <!--android:text="@string/CompileDate" -->
    <TextView
        android:id="@+id/txtVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CompileDate"
        android:textAlignment="center" />

    <!--android:text="@string/scan" -->
        <Button
            android:id="@+id/btnInternal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnInternalClick"
            android:text="@string/Internal"
            android:visibility="gone" />

        <Button
        android:id="@+id/btnScan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnScanOnClick"
        android:text="@string/scan" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                </androidx.recyclerview.widget.RecyclerView>

                <Button
                    android:id="@+id/btnConnect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="btnConnectClick"
                    android:text="@string/connect"
                    android:visibility="invisible" />
            </LinearLayout>
        </ScrollView>

        <!-- android:text="@string/connect" -->

    </LinearLayout>
</androidx.wear.widget.BoxInsetLayout>